# Task-Manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: run_tests.yml
task_manager/: forms.py  mixins.py  settings.py  tests.py  urls.py  utils.py  views.py
task_manager/fixtures/: label.json  status.json  task.json  test_label.json  test_status.json  test_task.json  test_user.json  user.json
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/tests/: test_forms.py  test_models.py  test_post.py  test_view.py  testcase.py
task_manager/templates/: base.html  base_form.html  index.html  login.html  navbar.html
task_manager/templates/labels/: delete.html  index.html  update.html
task_manager/templates/statuses/: delete.html  index.html  update.html
task_manager/templates/tasks/: delete.html  detail.html  index.html
task_manager/users/: apps.py  forms.py  tests.py  urls.py  utils.py  views.py
(+13 files in other folders)
