[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Tanuki Evil <tanuki.evil@yandex.ru>"]
readme = "README.md"
packages = [{ include = "task_manager" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
python-dotenv = "^1.0.1"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"
whitenoise = { extras = ["brotli"], version = "^6.7.0" }
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"
django-bootstrap5 = "^24.2"
django-filter = "^24.2"
rollbar = "0.16.3"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
flake8 = "^7.1.0"
coverage = "^7.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
